# opentelemetry-collector-operator

./: .gitignore  .wokeignore  CHANGELOG.md  LICENSE  README.md  charmcraft.yaml  justfile  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  observability_issue.yml
.github/workflows/: pull-request.yaml  release.yaml
src/: charm.py  config.py  config_builder.py  config_manager.py  constants.py  integrations.py  node_exporter.py  otlp.py  singleton_snap.py  snap_fstab.py  snap_lock.py  snap_management.py  utils.py
src/grafana_dashboards/: node-exporter-full.json  overview-dashboard.json  sustem-resources.subordinates.json  system-resources-subordinates.json
src/logrotate.d/: otelcol
src/prometheus_alert_rules/: arp_cache.rules  conntrack.rules  disk.rules  mdadm.rules  memory.rules  network.rules  otelcol_exporter.rules  otelcol_hardware.rules  otelcol_receiver.rules  useful.rules
terraform/: README.md  main.tf  output.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  helpers.py  test_charm.py  test_cos_agent.py  test_external_config.py  test_log_rotation.py  test_multi_backend_tracing.py  test_placeholder.py  test_principal.py  test_removal_hooks.py  test_scrape_var_log.py  test_snap_refresh.py  test_tracing.py
tests/unit/: conftest.py  helpers.py  test_ca_cert_restart.py  test_certificates.py  test_charm.py  test_charm_lifecycle.py  test_config_builder.py  test_config_manager.py  test_cos_agent_include_log_files.py  test_cos_agent_log_files.py  test_dashboard_transfer.py  (+20 more)
(+10 files in other folders)
